# concentrarium

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Specifications.md
src/: log.cpp
src/classes/: Agent.h  test.cpp
src/classes/logic/: MineralBehavior.cpp  MineralBehavior.h
src/graphism/: Shader.cpp  Shader.h  Window.cpp  Window.h  basevoxel.cpp
src/memory/: 2dRamGrid.h  RamGrid3d.h  example2d.cpp  example3d.cpp  ramGrid2d.cpp  ramGrid2d.h  ramGrid3d.cpp
src/shaders/: default.frag  default.vert
